# ARM11

./: .gitignore  CMakeLists.txt
doc/: .nfs000000008178e00c00000636  Checkpoint.tex  Report.bcf  Report.run.xml  Report.tex  presentation.tex
programs/: calculator.c  counter.s  gpio.s
src/: Makefile  ST.h  assemble  assemble.c  assembler_definitions.h  assembler_instructions.c  assembler_instructions.h  definitions.h  emulate.c  kernel.img  run.c  run.h  utilities.c
src/assemb/: Makefile  ST.c  data_process.c  definitions.h
src/assemble/: Makefile  assemble.c  assembleUint.c  assembleUint.h  assembler.h  branch.c  dataProcessing.c  dataProcessingAssemble.c  definitions.h  fileUtils.c  fileUtils.h  multiply.c  run.c  run.h  single_data_process.c  special.c
src/emulate/: .definitions.h.swp  .ldr01.out.swp  .test.swp  Makefile  dataProcessing.c  dataProcessing.h  definitions.h  emulate  emulate.c  emulate.h  getCodes.c  getCodes.h  instructionCycle.c  instructionCycle.h  instructions.c  instructions.h  setRegs.c  setRegs.h  shifter.c  shifter.h  utilities.c  utilities.h
src/emulate/Debug/: arm11_12_emulate
